[gd_scene load_steps=13 format=2]

[ext_resource path="res://Scenes/RandomSampler.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/BunnyMovement.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scripts/Bunny.gd" type="Script" id=3]
[ext_resource path="res://Scenes/BunnyDisplay.tscn" type="PackedScene" id=4]
[ext_resource path="res://Assets/Audio/blood_0.wav" type="AudioStream" id=5]
[ext_resource path="res://Assets/Audio/blood_1.wav" type="AudioStream" id=6]
[ext_resource path="res://Assets/Audio/blood_2.wav" type="AudioStream" id=7]
[ext_resource path="res://Assets/Audio/crush_0.wav" type="AudioStream" id=8]
[ext_resource path="res://Assets/Audio/crush_2.wav" type="AudioStream" id=9]
[ext_resource path="res://Assets/Audio/crush_1.wav" type="AudioStream" id=10]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 77.3519, 74.4188 )

[sub_resource type="CircleShape2D" id=2]
radius = 413.987

[node name="Bunny" type="KinematicBody2D"]
collision_layer = 4
script = ExtResource( 3 )
blood_color = Color( 0.745098, 0.0705882, 0.313726, 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 1 )

[node name="BunnyMovement" parent="." instance=ExtResource( 2 )]
jump_force = Vector2( 1600, 4800 )
fric = 0.3
gravity = 200.0
body_path = NodePath("..")

[node name="BunnyDisplay" parent="." instance=ExtResource( 4 )]
hind_limb_hop_dur = 0.434
hind_limb_contract_dur = 0.195
hind_limb_extend = {
"foot": 1.164,
"leg": -2.672,
"thigh": 2.639
}

[node name="HurtArea" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtArea"]
shape = SubResource( 2 )

[node name="BloodSounds" parent="." instance=ExtResource( 1 )]

[node name="0" type="AudioStreamPlayer" parent="BloodSounds"]
stream = ExtResource( 5 )
volume_db = -5.605

[node name="1" type="AudioStreamPlayer" parent="BloodSounds"]
stream = ExtResource( 6 )
volume_db = -5.605

[node name="2" type="AudioStreamPlayer" parent="BloodSounds"]
stream = ExtResource( 7 )
volume_db = -4.982

[node name="CrushSounds" parent="." instance=ExtResource( 1 )]

[node name="0" type="AudioStreamPlayer" parent="CrushSounds"]
stream = ExtResource( 8 )
volume_db = 4.359

[node name="1" type="AudioStreamPlayer" parent="CrushSounds"]
stream = ExtResource( 10 )
volume_db = 4.359

[node name="2" type="AudioStreamPlayer" parent="CrushSounds"]
stream = ExtResource( 9 )
volume_db = 3.114

[connection signal="hop" from="BunnyMovement" to="." method="_on_BunnyMovement_hop"]
[connection signal="body_entered" from="HurtArea" to="." method="_on_HurtArea_body_entered"]
